It makes sense to display the message on the console when an error occurs and the operation is aborted by longjmp.

BUG: 276154