libs/jpegutils/jpegutils.cpp
@@ -96,9 +96,7 @@ static void jpegutils_jpeg_error_exit(j_common_ptr cinfo)
     char buffer[JMSG_LENGTH_MAX];
     (*cinfo->err->format_message)(cinfo, buffer);
 
-#ifdef USE_ADVANCEDDEBUGMSG
-    kDebug() << buffer;
-#endif
+    kDebug() << "Jpegutils error, aborting operation:" << buffer;
 
     longjmp(myerr->setjmp_buffer, 1);
 }
